# vanguard-creator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  SPECS.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/fonts/: fonts.tar.zst
assets/symbols/: symbols.tar.zst
src/: bundle.rs  card.rs  fonts.rs  layout.rs  lib.rs  main.rs  mse.rs  print_cmd.rs  render.rs  symbols.rs  sync_cmd.rs  text.rs
tests/: gerrard.yaml  render_tests.rs  sidar.yaml  silverqueen.yaml  volrath.yaml
