[package]
name = "vgc"
version = "0.6.0"
edition = "2021"

[lib]
name = "vgc"
path = "src/lib.rs"

[[bin]]
name = "vgc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0.25"
ab_glyph = "0.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
zip = "2"
anyhow = "1"
regex = "1"
tar = "0.4"
zstd = "0.13"
